--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,8 +45,13 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\FieldBlockData.cs" />
-     <Compile Include="Assets\Scripts\FieldData.cs" />
+     <Compile Include="Assets\Scripts\Controllers\BlockDataTransferController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\FieldBlockData.cs" />
+     <Compile Include="Assets\Scripts\Datums\DataPacks.cs" />
+     <Compile Include="Assets\Scripts\Datums\FieldData.cs" />
+     <Compile Include="Assets\Scripts\EnlightmentGrid.cs" />
+     <Compile Include="Assets\Scripts\NeighboursList.cs" />
+     <Compile Include="Assets\Scripts\OccupationGrid.cs" />
      <None Include="Assets\csc.rsp" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>F:/Unitys/p1_lifeCellModel/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
